--- a/manipulator_moveit_config/package.xml
+++ b/manipulator_moveit_config/package.xml
@@ -5,8 +5,8 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the robot with the MoveIt Motion Planning Framework
   </description>
-  <author email="tarizina98@mail.ru">Nastya</author>
-  <maintainer email="tarizina98@mail.ru">Nastya</maintainer>
+  <author email="tarizina98@mail.ru">nastya</author>
+  <maintainer email="tarizina98@mail.ru">nastya</maintainer>
 
   <license>BSD</license>
 
